# skillhub

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: cookbook.md
registry/: index.json
skillhub/: adapters.py  bridge.py  composer.py  installer.py  main.py  manifest.py  optimize.py  registry.py
skills/agent-builder/: SKILL.md  skill.json
skills/api-design/: SKILL.md  skill.json
skills/backend-architect/: SKILL.md
skills/career-ops/: SKILL.md
skills/cicd-agent/: SKILL.md
skills/code-reviewer/: SKILL.md  skill.json
skills/cost-tracker/: SKILL.md  skill.json
skills/data-pipeline/: SKILL.md
skills/debug-agent/: SKILL.md  skill.json
skills/doc-generator/: SKILL.md  skill.json
skills/docker-agent/: SKILL.md  skill.json
skills/fastapi-patterns/: SKILL.md  skill.json
skills/frontend-developer/: SKILL.md
skills/git-workflow/: SKILL.md  skill.json
skills/kubernetes-agent/: SKILL.md
skills/llm-evaluator/: SKILL.md  skill.json
skills/mle-workflow/: SKILL.md  skill.json
skills/nextjs-patterns/: SKILL.md
skills/openai-patterns/: SKILL.md
skills/penetration-tester/: SKILL.md
skills/performance-optimizer/: SKILL.md
skills/pr-summarizer/: SKILL.md  skill.json
skills/prompt-optimizer/: SKILL.md  skill.json
skills/python-patterns/: SKILL.md  skill.json
skills/rag-evaluator/: SKILL.md  skill.json
skills/react-patterns/: SKILL.md  skill.json
skills/refactor-agent/: SKILL.md  skill.json
skills/research-agent/: SKILL.md  skill.json
skills/security-review/: SKILL.md  skill.json
skills/sql-agent/: SKILL.md  skill.json
skills/system-design/: SKILL.md
skills/test-writer/: SKILL.md  skill.json
skills/typescript-patterns/: SKILL.md
skills/yc-job-tracker/: SKILL.md  skill.json
tests/: __init__.py  conftest.py  test_adapters.py  test_cli.py  test_composer.py  test_installer.py  test_registry.py
